feat: add delete client

--- a/projeto 2/code/src/main/resources/application.properties
+++ b/projeto 2/code/src/main/resources/application.properties
@@ -1,21 +1,19 @@
 spring.application.name=project-2
 
-# Configuração da conexão com o banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://ep-bold-glitter-a4t93jz7-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
 spring.datasource.username=default
 spring.datasource.password=KCpH76mOwgPf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configurações adicionais para melhorar a conexão
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
-# Configuração do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Logging para debug de conexão
 logging.level.org.springframework.jdbc.core=TRACE
 logging.level.com.zaxxer.hikari=DEBUG
+
+spring.main.allow-circular-references=true
