--- a/projeto 3/code/projeto3/package.json
+++ b/projeto 3/code/projeto3/package.json
@@ -3,10 +3,12 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
+   "license": "MIT",
    "devDependencies": {
-      "@types/node": "^16.11.10",
-      "ts-node": "10.9.1",
-      "typescript": "4.5.2"
+      "@types/express": "^5.0.0",
+      "@types/node": "^16.18.114",
+      "ts-node": "^10.9.2",
+      "typescript": "^4.5.2"
    },
    "dependencies": {
       "express": "^4.21.1",
@@ -16,6 +18,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "node --loader ts-node/esm src/app.ts"
    }
 }
