--- a/projeto 3/code/projeto3/package.json
+++ b/projeto 3/code/projeto3/package.json
@@ -11,6 +11,8 @@
       "typescript": "^4.5.2"
    },
    "dependencies": {
+      "@types/bcrypt": "^5.0.2",
+      "bcrypt": "^5.1.1",
       "express": "^4.21.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
