--- a/projeto 3/code/projeto3/package.json
+++ b/projeto 3/code/projeto3/package.json
@@ -13,6 +13,7 @@
    "dependencies": {
       "@types/bcrypt": "^5.0.2",
       "bcrypt": "^5.1.1",
+      "cors": "^2.8.5",
       "express": "^4.21.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
