--- a/projeto 4/code/client/package.json
+++ b/projeto 4/code/client/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
     "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
     "vue-toastification": "2.0.0-rc.5",
     "vuetify": "^3.7.3"
   },
