--- a/projeto 4/code/client/package.json
+++ b/projeto 4/code/client/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
+    "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-toastification": "2.0.0-rc.5",
+    "vue3-toastify": "^0.2.4",
     "vuetify": "^3.7.3"
   },
   "devDependencies": {
