--- a/projeto 4/code/projeto3/package.json
+++ b/projeto 4/code/projeto3/package.json
@@ -7,6 +7,7 @@
    "devDependencies": {
       "@types/express": "^5.0.0",
       "@types/node": "^16.18.114",
+      "@types/nodemailer": "^6.4.17",
       "ts-node": "^10.9.2",
       "typescript": "^4.5.2"
    },
@@ -16,6 +17,7 @@
       "cors": "^2.8.5",
       "express": "^4.21.1",
       "multer": "1.4.5-lts.1",
+      "nodemailer": "^6.9.16",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.20"
